feat udistrital/arka_cliente#934: Entradas con elementos
- Se incluye lista de entradas en el historial del elemento.
