# swagger/swagger.yml
@@ -227,6 +227,10 @@ paths:
         name: acta
         description: Indica si consulta por el elemento del acta o de la salida
         type: boolean
+      - in: query
+        name: entradas
+        description: Indica si consulta las entradas
+        type: boolean
       responses:
         "200":
           description: ""
@@ -1014,6 +1018,9 @@ paths:
         "404":
           description: not found resource
 definitions:
+  11627.<nil>.Movimiento:
+    title: Movimiento
+    type: object
   models.DepreciacionElemento:
     title: DepreciacionElemento
     type: object
@@ -1124,6 +1131,10 @@ definitions:
         $ref: '#/definitions/models.Movimiento'
       Depreciacion:
         $ref: '#/definitions/models.Movimiento'
+      Elemento:
+        $ref: '#/definitions/models.ElementosMovimiento'
+      Entradas:
+        $ref: '#/definitions/11627.<nil>.Movimiento'
       Salida:
         $ref: '#/definitions/models.Movimiento'
       Traslados:
